to receive s6-svscanctl commands; it does *not* mean all the services started
at s6-svscan launch will be ready.
 - New optional file in a service directory: down-signal. It allows you to
customize the signal sent by s6-svc -d (and now s6-svc -r too).
 - New s6-svc option: -r. Sends the signal defined in the down-signal file
(still SIGTERM by default).


In 2.7.1.1
----------

 - Bugfixes.


In 2.7.1.0
----------

 - Bugfixes.
 - s6-svwait et al. now exit 102 instead of hanging if s6-supervise dies.
 - New commands: s6-svdt, s6-svdt-clear, s6-permafailon
 - s6-tai64nlocal can now print GMT times with the -g option.


In 2.7.0.0
----------

 - Bugfixes.
 - s6-ftrigrd and s6lockd internally use the textclient API/ABI
instead of skaclient. This is cleaner, faster code.
 - New "-a perms" option to s6-ipcserver and s6-ipcserver-socketbinder.


In 2.6.2.0
----------

 - Bugfixes.
 - New functions: s6_fdholder_start() and s6_fdholder_end().


In 2.6.1.1
----------

 - Bugfixes.


In 2.6.1.0
----------

 - Bugfixes.
 - Addition of the s6_svc_lock_take() and s6_svc_lock_release()
functions, to fix a race condition in s6-rc.
 - New program: s6-notifyoncheck, to implement polling for
readiness and reroute the result into the s6 readiness notification
mechanism.


In 2.6.0.0
----------

 - Bugfixes. One of the bugfixes required a visible ABI change,
which explains the major version bump.
 - Documentation fixes.


In 2.5.1.0
----------

 - Bugfixes.
 - s6-ftrig-listen1 now prints to stdout the last event (the last
byte) it received and made it match the regexp it was given.
 - s6-supervise now recognizes the "timeout-kill" file in a service
directory. If this file exists and contains a nonzero integer t,
the behaviour of a "s6-svc -d" command is changed from
"send a SIGTERM and a SIGCONT" to "send a SIGTERM and a SIGCONT,
then if the service is still not dead after t milliseconds, send
a SIGKILL".


In 2.5.0.0
----------

 - Added this NEWS file. :)