@@ -6,8 +6,8 @@ Build Instructions
 
   - A POSIX-compliant C development environment
   - GNU make version 3.81 or later
-  - skalibs version 2.6.4.0 or later: http://skarnet.org/software/skalibs/
-  - execline version 2.5.0.0 or later: http://skarnet.org/software/execline/
+  - skalibs version 2.7.0.0 or later: http://skarnet.org/software/skalibs/
+  - execline version 2.5.0.1 or later: http://skarnet.org/software/execline/
 
  This software will run on any operating system that implements
 POSIX.1-2008, available at:
