@@ -83,11 +83,11 @@ with s6</a> </li>
  <li> A POSIX-compliant system with a standard C development environment </li>
  <li> GNU make, version 3.81 or later </li>
  <li> <a href="//skarnet.org/software/skalibs/">skalibs</a> version
-2.6.4.0 or later. It's a build-time requirement. It's also a run-time
+2.7.0.0 or later. It's a build-time requirement. It's also a run-time
 requirement if you link against the shared version of the skalibs
 library. </li>
  <li> <a href="//skarnet.org/software/execline/">execline</a> version
-2.5.0.0 or later. It's a build-time and run-time requirement. </li>
+2.5.0.1 or later. It's a build-time and run-time requirement. </li>
 </ul>
 
 <h3> Licensing </h3>
