@@ -21,7 +21,10 @@
 <h2> in 2.7.2.0 </h2>
 
 <ul>
- <li> execline dependency bumped to 2.5.0.0. </li>
+ <li> <a href="//skarnet.org/software/skalibs/"></a>skalibs</a>
+dependency bumped to 2.7.0.0. </li>
+ <li> <a href="//skarnet.org/software/execline/">execline</a>
+dependency bumped to 2.5.0.1. </li>
  <li> <tt>-B</tt> option added to
 <a href="s6-ipcserver-socketbinder.html">s6-ipcserver-socketbinder</a>. </li>
  <li> <tt>-d&nbsp;<em>notif</em></tt> option added to
